WIP refactoring web bindings